# obs-amd-encoder

./: .gitignore  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  Jenkinsfile  LICENSE  OBS AMF.sln  PATCH_NOTES.md  README.md  appveyor.yml  index.html  inno-obs-amf.iss  params.json
#Resources/: .gitignore  HIDDEN_PARAMETERS.md  HiddenParameters.md  HiddenParameters.txt  Installer.in.iss  Installer.iss  PATCH_NOTES.md  PatchNotes.txt  package.bat  package.in.bat
#Resources/InnoSetup/: Installer.iss
#ThirdParty/: README.md
.github/workflows/: main.yml
AMF/: LICENSE.txt
AMF/amf/public/include/components/: FFMPEGVideoDecoder.h  VideoConverter.h  VideoDecoderUVD.h  VideoEncoderHEVC.h  VideoEncoderVCE.h
Include/: Version.h.in  amd-amf-vce-capabilities.h  amd-amf-vce.h  amf-capabilities.h  amf-encoder-h264.h  amf-encoder-h265.h  amf-encoder.h  amf-h264.h  amf.h  api-base.h  api-d3d11.h  api-d3d9.h  api-host.h  api-opengl.h  enc-h264.h  enc-h265.h  plugin.h  strings.h  utility.h
Resources/locale/: bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  eu-ES.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  hr-HR.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sr-CS.ini  sr-SP.ini  sv-SE.ini  tr-TR.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
Source/: amd-amf-vce-capabilities.cpp  amd-amf-vce.cpp  amd-amf.cpp  amf-capabilities.cpp  amf-encoder-h264.cpp  amf-encoder-h265.cpp  amf-encoder.cpp  amf-h264.cpp  amf.cpp  api-base.cpp  api-d3d11.cpp  api-d3d9.cpp  api-host.cpp  api-opengl.cpp  enc-h264.cpp  enc-h265.cpp  misc-util.cpp  plugin.cpp  utility.cpp
amf-test/: CMakeLists.txt  main.cpp
amf-test/libobs/: obs-module.c  obs-module.h
ci/: appveyor-build.bat  appveyor-install.bat  appveyor-package.bat  installer.in.iss
cmake/: legacy.cmake
cmake/windows/: obs-module.rc.in
enc-amf/: enc-amf.vcxproj  enc-amf.vcxproj.filters
enc-amf/Include/: amd-amf-h264-capabilities.h  amd-amf-h264.h  amd-amf-vce-capabilities.h  amd-amf-vce.h  amd-amf.h  api-base.h  api-d3d11.h  api-d3d9.h  enc-h264-simple.h  enc-h264.h  plugin.h  win-amf.h
enc-amf/Resources/locale/: bg-BG.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  en-US.ini  es-ES.ini  eu-ES.ini  fi-FI.ini  fr-FR.ini  hr-HR.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  ru-RU.ini  sr-CS.ini  sr-SP.ini  sv-SE.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
enc-amf/Source/: amd-amf-h264-capabilities.cpp  amd-amf-h264.cpp  amd-amf-vce-capabilities.cpp  amd-amf-vce.cpp  amd-amf.cpp  amf-vce-capabilities.cpp  amf-vce.cpp  api-base.cpp  api-d3d11.cpp  api-d3d9.cpp  enc-h264-simple.cpp  enc-h264.cpp  misc-util.cpp  plugin.cpp  win-amf.cpp
include/: amf-capabilities.h  amf-capabilities.hpp  amf-encoder-h264.h  amf-encoder-h264.hpp  amf-encoder-h265.h  amf-encoder-h265.hpp  amf-encoder.h  amf-encoder.hpp  amf.h  amf.hpp  api-base.h  api-base.hpp  api-d3d11.h  api-d3d11.hpp  api-d3d9.h  api-d3d9.hpp  api-host.h  api-host.hpp  api-opengl.h  api-opengl.hpp  enc-h264.h  enc-h264.hpp  enc-h265.h  enc-h265.hpp  plugin.h  plugin.hpp  strings.h  strings.hpp  utility.h  utility.hpp  version.h.in  version.hpp.in
resources/locale/: an-ES.ini  ar-SA.ini  ba-RU.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  nn-NO.ini  (+18 more)
source/: amf-capabilities.cpp  amf-encoder-h264.cpp  amf-encoder-h265.cpp  amf-encoder.cpp  amf.cpp  api-base.cpp  api-d3d11.cpp  api-d3d9.cpp  api-host.cpp  api-opengl.cpp  enc-h264.cpp  enc-h265.cpp  plugin.cpp  utility.cpp
win-amf/: win-amf.vcxproj  win-amf.vcxproj.filters
win-amf/Include/: amf-h264-capabilities.h  amf-h264.h  amf-vce-capabilities.h  amf-vce.h  enc-h264-simple.h  enc-h264.h  win-amf.h
win-amf/Resources/locale/: da-DK.ini  en-US.ini  es-ES.ini  hu-HU.ini  ru-RU.ini  vi-VN.ini
win-amf/Source/: amf-h264-capabilities.cpp  amf-h264.cpp  amf-vce-capabilities.cpp  amf-vce.cpp  enc-h264-simple.cpp  enc-h264.cpp  win-amf.cpp
